--- a/Article.html
+++ b/Article.html
@@ -61,7 +61,7 @@
 			
 				<div class="bletter">
 					<p class="para">Dear Mrs Tho</p>
-					<p >We are from group 8 with two members are Do Ngoc Anh Vien and Nguyen Khang Duy. It's our honor to present you this websit for our final project. This an ecommerce website about selling pizzas online. We hope you can enjoy this and give us high mark for this subject. </p>
+					<p >We are from group 8 with two members are Do Ngoc Anh Vien and Nguyen Khang Duy. It's our honor to present you this website for our final project. This is an ecommerce website about selling pizzas online. In spite of tough time that covid 19 bring to our life, we have manage and try our best to satisfy your expectation. We hope you can enjoy our efforts and give us high mark for this subject. </p>
 					<p>For all the best wishes to you and your family!</p>
 					<p>Nguyen Khang Duy <br> Do Ngoc Anh Vien.</p>
 					
